# bts

./: .env.test  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: makefile.yml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: asgi.py  cmd.py  settings.py
app/dto/: annotations.py  commands.py  enums.py  exceptions.py
app/dto/entities/: __init__.py  base.py  bets.py
app/logs/: __init__.py  context.py  logging.py
app/models/: __init__.py  base.py  bets.py  users.py
app/models/alembic_env/: __init__.py  env.py  version_table.py
app/repository/db/: __init__.py  base.py  bets.py  db.py  users.py
app/services/: bets.py  events.py  liveness_probe.py  service.py
app/transport/: __init__.py
app/transport/http/: __init__.py  dependencies.py  exceptions.py  middlewares.py  routes.py
app/transport/http/api/public/: __init__.py  bets.py  events.py
app/transport/http/api/service/: health.py
app/transport/http/schema/: __init__.py  bets.py  error.py  events.py
app/utils/: __init__.py  cache.py  misc.py
contrib/: docker-compose.yml
deployment/: Dockerfile
scripts/: entrypoint.sh
tests/: conftest.py
tests/units/api/: test_bets.py  test_events.py
tests/units/fixtures/: _load_fixtures.py  api.py  app.py  database.py
